# catnip

./: .gitignore  README.md  conventions.md  conventions.txt  pyproject.toml  readme.md
modules/: config.py  data.py  nomnom.py  pep.py  quantum.py  rule.py  tensor.py  vecnum.py  visual.py  wolfram.py
notebooks/: data_generation.py  eca-evolve.ipynb  ops-tests.ipynb
src/catnip/: __init__.py  config.py  random.py  util.py
src/catnip/imp/: __init__.py  eca.py
src/catnip/ops/: __init__.py  contract.py  convert.py  measure.py  opt_mpo.py  opt_mps.py
tests/: optimization.ipynb  test_eca.py  test_num_stability.ipynb  test_ops.py  test_rule.ipynb  test_vecnum.ipynb  test_visual.ipynb
tests/function/: create_rule_mpo.ipynb  mps.ipynb  mps_mpo_contract.ipynb  optimize_bonds.ipynb  optimize_mpo.ipynb  v_contract.ipynb
